--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 group 'ir.metrix.fluttersdk'
-version '1.0-SNAPSHOT'
+version '0.9.2'
 
 buildscript {
     repositories {
@@ -34,11 +34,25 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
 }
 dependencies {
 
+
+    implementation files('libs/metrix.jar')
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+
     implementation 'com.android.installreferrer:installreferrer:1.0'
     implementation 'com.google.android.gms:play-services-analytics:16.0.7'
-
-    implementation 'ir.metrix:metrix:0.9.2'
 }
