--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,21 +1,8 @@
 group 'ir.metrix.fluttersdk'
 version '0.9.2'
 
-buildscript {
-    repositories {
-        google()
-        jcenter()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-    }
-}
-
 rootProject.allprojects {
     repositories {
-        google()
-        jcenter()
         maven {
             url 'https://dl.bintray.com/metrixorg/maven'
         }
@@ -44,15 +31,6 @@ android {
     }
 }
 dependencies {
-
-
-    implementation files('libs/metrix.jar')
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
-
-    implementation 'com.android.installreferrer:installreferrer:1.0'
+    implementation 'ir.metrix:flutter:0.11.0'
     implementation 'com.google.android.gms:play-services-analytics:16.0.7'
 }
