--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -55,8 +55,9 @@ flutter {
 }
 
 dependencies {
-    implementation 'ir.metrix:flutter:0.13.0'
+    implementation 'ir.metrix:flutter:0.14.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
 }
