--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: metrix
 description: Metrix flutter plugin.
 version: 0.16.0
-author: metrixir <admin@metrix.ir>
 homepage: https://metrix.ir
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
+  flutter: ">=1.10.0"
 
 dependencies:
   flutter:
@@ -20,13 +20,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The androidPackage and pluginClass identifiers should not ordinarily
-  # be modified. They are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
   plugin:
-    androidPackage: ir.metrix.fluttersdk
-    pluginClass: MetrixPlugin
+    platforms:
+      android:
+        package: ir.metrix.fluttersdk
+        pluginClass: MetrixPlugin
+      ios:
+        pluginClass: MetrixPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
